fix: auth token dialog not showing up when configuring sync from settings
Closes #4659

--- a/src/styles/util.scss
+++ b/src/styles/util.scss
@@ -112,3 +112,15 @@ body.isDarkTheme .show-dark-only {
 body.isDarkTheme .show-light-only {
   display: none !important;
 }
+
+.mt2 {
+  margin-top: 16px;
+}
+
+.mt3 {
+  margin-top: 24px;
+}
+
+.block {
+  display: block;
+}
